完成了第一週的編程作業